# playing-understanding-websockets.

./: Makefile  README.org  client.html  pyproject.toml  serve.py
client-one/: index.html
client-one/js/: scripts.js
js/: scripts.js
